--- a/crates/stats/Cargo.toml
+++ b/crates/stats/Cargo.toml
@@ -3,13 +3,10 @@ name = "arpa-stats"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rocket = { version = "0.5.0", features = ["json"] }
-serde = "1.0.197"
+actix-web = "4.2.1"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 
-[lib]
-name = "arpa_stats"
-path = "src/lib.rs"
+[dev-dependencies]
+tokio = { version = "1.24.2", features = ["macros"] }
